Implement pagination in user endpoints